--- a/mychild.html
+++ b/mychild.html
@@ -27,13 +27,13 @@
     <div class = "homesquare1">
         <p> Meet M&egrave;o :) </p>
             <div class="images1">
-                <img src="images/IMG_8930.HEIC">
-                <img src="images/IMG_2998.jpg">
-                <img src="images/IMG_8693.HEIC">
+                <img src="images/christmasMeo.jpg">
+                <img src="images/pumpkinMeo.JPG">
+                <img src="images/meoCake.jpg">
                     <div class="images2">
-                    <img src="images/IMG_8254.HEIC">
-                    <img src="images/IMG_4348.HEIC">
-                    <img src="images/IMG_4982.jpg">
+                    <img src="images/bellyMeo.jpg">
+                    <img src="images/blanketMeo.jpg">
+                    <img src="images/angryMeo.jpg">
                     </div>
             </div>
     </div>
